[pkg/gnucash] per month expenses work in progress

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -1,87 +1,26 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Chartist</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{{ template "chart_header.tmpl" .}}
+<script>
+  var data = {
+    labels: [
+      {{ range .data }}"{{ .Name }} €{{ .Average }}",{{ end }}
+    ],
+    series: [
+      {{ range .data }}{{ .Average }},{{ end }}
+    ]
+  };
 
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-    <style>
-      html {
-        height: 100%;
-      }
+  var options = {
+    chartPadding: 30,
+      labelOffset: 0,
+      labelInterpolationFnc: function(value) {
+        console.log(value)
+        return value;
+      },
+      donut: true,
+      donutWidth: 200,
+      startAngle: 280
+  };
 
-      body {
-        height: 100%;
-        display: flex;
-        flex-flow:column;
-        overflow: hidden;
-      }
-
-      .ct-chart {
-        flex: 1 1 0;
-        overflow: hidden;
-      }
-
-      .ct-label {
-        font-size: 1.5rem;
-        fill: black;
-      }
-
-      .centered {
-        margin: auto;
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0; right: 0;
-        width: 300px;
-        height: 300px;
-        font-size: 1.5rem;
-        display: table;
-      }
-
-      .aligned {
-        display: table-cell;
-        vertical-align: middle;
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="ct-chart" id="chart"></div>
-    <div class="centered">
-      <div class="aligned">
-        expenses / month
-        <br />
-        €{{ .calc.total_month }}
-      </div>
-    </div>
-
-    <script>
-      var data = {
-        labels: [
-          {{ range .data }}"{{ .Name }} €{{ .Average }}",{{ end }}
-        ],
-        series: [
-          {{ range .data }}{{ .Average }},{{ end }}
-        ]
-      };
-
-      var options = {
-        chartPadding: 30,
-          labelOffset: 0,
-          labelInterpolationFnc: function(value) {
-            console.log(value)
-            return value;
-          },
-          donut: true,
-          donutWidth: 200,
-          startAngle: 280
-      };
-
-      new Chartist.Pie('.ct-chart', data, options);
-    </script>
-  </body>
-</html>
+  new Chartist.Pie('.ct-chart', data, options);
+</script>
+{{ template "chart_footer.tmpl" .}}
