--- a/templates/parse.html
+++ b/templates/parse.html
@@ -1,4 +1,4 @@
-{{ template "header.tmpl" .}}
+{{ template "header.html" .}}
 
 <!--
 <div class="row">
@@ -54,4 +54,4 @@
 </table>
 
 {{ template "upload.html" .}}
-{{ template "footer.tmpl" .}}
+{{ template "footer.html" .}}
