--- a/templates/parse_successful.html
+++ b/templates/parse_successful.html
@@ -1,4 +1,4 @@
-{{ template "header.tmpl" .}}
+{{ template "header.html" .}}
 
 <div class="card">
   <div class="card-body">
@@ -6,4 +6,4 @@
   </div>
 </div>
 
-{{ template "footer.tmpl" .}}
+{{ template "footer.html" .}}
