--- a/templates/gas.html
+++ b/templates/gas.html
@@ -1,4 +1,4 @@
-{{ template "header.tmpl" .}}
+{{ template "header.html" .}}
 
 <table class="table table-sm">
   <thead>
@@ -34,4 +34,4 @@
 </table>
 
 {{ template "gas_input.html" .}}
-{{ template "footer.tmpl" .}}
+{{ template "footer.html" .}}
